# 1724_CourseProject

./: Cargo.toml  README.md  architecture.txt  cli.rs  main.rs  proposal.md  routes.rs  videodemo.md
1123/: Cargo.toml
1123/src/: routes.rs  state.rs
1123/src/handlers/: chat.rs  mod.rs
1123/src/models/: chat_room.rs
1205/: Cargo.toml
1205/src/: cli.rs  main.rs  routes.rs
1205/src/handlers/: auth_handler.rs  chat_handler.rs  mod.rs  presence_handler.rs
1205/src/models/: mod.rs  user.rs
1205/src/services/: chat_service.rs  mod.rs
1724_CourseProject-master/src/: main.rs  routes.rs
ChatServer_v0/client/src/: main.rs
ChatServer_v0/server/: README.md
ChatWithoutRoom/: README.md  architecture.txt  proposal.md
ChatWithoutRoom/1724_CourseProject-master/src/: state.rs  utils.rs
ChatWithoutRoom/client/: Cargo.toml
ChatWithoutRoom/client/src/: main.rs
chat/: Cargo.toml
chat/client/src/: main.rs
chat/server/: Cargo.toml
chat/server/src/: main.rs  routes.rs  state.rs
chat/server/src/models/: chat_room.rs  user.rs
chat/server/src/services/: auth.rs  chat.rs  message.rs  mod.rs  presence_service.rs
chat/src/: routes.rs  state.rs
chat/src/handlers/: chat.rs  mod.rs
chat/src/models/: chat_room.rs  mod.rs
chat/src/services/: chat_service.rs  presence_service.rs
chat1205/client/src/: main.rs
chat1205/server/: Cargo.toml
chat1205/server/src/: main.rs
chat1205/server/src/models/: chat_room.rs  mod.rs
chat1206/server/: Cargo.toml
fronten/: yew.md
part3/src/: main.rs
server/src/: routes.rs
src/: routes.rs
videodemo/: README.md
(+22 files in other folders)
