[package]
name = "chatapp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web="4"
actix="0.13"
actix-rt="2"
actix-web-actors="4"

bcrypt="0.13"
uuid={version="1",features=["v4"]}

tokio={version="1",features=["full"]}
chrono="0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["json"] }
serde_derive = "1.0"
