[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web="4"
actix="0.13"
actix-rt="2"
actix-web-actors="4"

bcrypt="0.13"
uuid={version="1",features=["v4"]}

tokio={version="1",features=["full"]}
chrono="0.4"

tokio-tungstenite = "*"
tungstenite = "0.24"
futures-util = "0.3"
actix-ws = "0.3.0"